# GRBA

./: .gitignore  Cargo.toml  README.md  grba_test_conf.json
.github/workflows/: ci.yml  release.yml
crates/grba_bench/: Cargo.toml
crates/grba_bench/src/: main.rs
crates/grba_core/: Cargo.toml
crates/grba_core/benches/: scheduler.rs
crates/grba_core/src/: emulator.rs  joypad.rs  lib.rs  logging.rs  scheduler.rs  utils.rs
crates/grba_core/src/bus/: mod.rs  ram.rs
crates/grba_core/src/cartridge/: header.rs  mod.rs
crates/grba_core/src/cpu/: mod.rs  registers.rs
crates/grba_core/src/cpu/arm/: block_data_transfer.rs  branching.rs  data_processing.rs  load_store.rs  mod.rs  multiply.rs  psr_transfer.rs  single_data_swap.rs
crates/grba_core/src/emulator/: debug.rs  debugging.rs  frame.rs  mod.rs
crates/grba_core/src/emulator/bus/: bios.rs  debug.rs  dma.rs  helpers.rs  interrupts.rs  keypad.rs  mod.rs  ram.rs  system_control.rs  timers.rs
crates/grba_core/src/emulator/cartridge/: header.rs  mod.rs
crates/grba_core/src/emulator/cpu/: common.rs  mod.rs  registers.rs
crates/grba_core/src/emulator/cpu/arm/: block_data_transfer.rs  branching.rs  data_processing.rs  load_store.rs  mod.rs  multiply.rs  psr_transfer.rs  single_data_swap.rs
crates/grba_core/src/emulator/cpu/thumb/: alu.rs  branch.rs  load_store.rs  mod.rs  multi_load_store.rs
crates/grba_core/src/emulator/ppu/: debug.rs  memory.rs  mod.rs  oam.rs  palette.rs  registers.rs  tile_rendering.rs
crates/grba_core/tests/assets/gba_tests/: README.md
crates/grba_core/tests/emu_tests/: cpu.rs  main.rs  setup.rs
crates/grba_front/: Cargo.toml
crates/grba_front/src/: config.rs  debug.rs  main.rs  utils.rs
crates/grba_front/src/gui/: mod.rs
crates/grba_front/src/gui/debug/: colors.rs  cpu_state.rs  cpu_state_view.rs  emu_state.rs  execution_view.rs  memory_view.rs  messages.rs  mod.rs  palette_view.rs  utils.rs
crates/grba_front/src/gui/debug/io_view/: io_utils.rs  mod.rs  registers.rs
crates/grba_front/src/rendering/: framerate.rs  mod.rs
crates/grba_front/src/rendering/gui/: mod.rs
crates/grba_front/src/rendering/gui/debug/: cpu_state.rs  memory_view.rs  messages.rs  mod.rs
crates/grba_front/src/runner/: frame_exchanger.rs  messages.rs  mod.rs
crates/grba_log/: Cargo.toml
crates/grba_log/src/: args.rs  bin_logger.rs  diff.rs  format.rs  main.rs  run.rs
crates/grba_log/src/commands/: diff.rs  mod.rs  run.rs
crates/grba_lut_generate/: Cargo.toml
crates/grba_lut_generate/src/: config.rs  errors.rs  lib.rs  lut_generator.rs
crates/grba_test/: Cargo.toml
crates/grba_test/src/: config.rs  formatting.rs  main.rs  panics.rs  processing.rs  utils.rs
docs/: GBATEK - GBA_NDS Technical Info.htm  README.md
test_roms/normal_tests/: mgba_suite.gba  pipelineFun.gba
