# Build dependencies with full release optimizations in debug builds since they'll rarely change
[profile.dev.package."*"]
opt-level = 3
debug = 0

# Build core emulator with full debug info for debugging.
[profile.dev.package.grba_core]
debug = 2
opt-level = 1

#[profile.dev.package.grba_front]
#debug = 2

[profile.dev]
incremental = true
debug = 0

[profile.release.package.grba_core]
debug = 2

[profile.release]
incremental = true
debug = 0

# Used for production builds
[profile.perf]
inherits = "release"
lto = true
codegen-units = 1

# Used for Profiling
[profile.profiling]
inherits = "release"
incremental = true
debug = 1

[workspace]
resolver = "2"
members = ["crates/grba_core", "crates/grba_front", "crates/grba_test"]
default-members = ["crates/grba_front"]