[profile.dev.package."*"]
opt-level = 3
debug = 0

# Build core emulator with full debug info for debugging.
[profile.dev.package.grba_core]
debug = 2
opt-level = 1

# The proc macro gets stuck in an infinite loop without debug info
[profile.dev.package.thiserror-impl]
debug = 2

#[profile.dev.package.grba_front]
#debug = 2

[profile.dev]
incremental = true
debug = 0

[profile.release.package.grba_core]
debug = 2

[profile.release]
incremental = true
debug = 0

# Used for production builds
[profile.perf]
inherits = "release"
lto = true
codegen-units = 1

# Used for Profiling
[profile.profiling]
inherits = "release"
incremental = true
debug = 1

[workspace]
resolver = "2"
members = ["crates/grba_core", "crates/grba_front", "crates/grba_test", "crates/grba_log"]
default-members = ["crates/grba_front"]