[package]
name = "grba_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
cpu-logging = []
bus-logging = []
ppu-logging = []
bin-logging = []

[dev-dependencies]
criterion = "0.3.5"

[dependencies]
# Emulation Development
grba_lut_generate = { path = "../grba_lut_generate" }
blip_buf = { git = "https://github.com/mvdnes/blip_buf-rs" }
bitflags = "1.3.2"
modular-bitfield = { git = "https://github.com/Hirtol/modular-bitfield" }
binary-heap-plus = "0.4.1"

num-traits = "0.2"
num-derive = "0.3"
regex = "1.5.4"

serde = { version = "1.0.135", features = ["derive"] }

# Profiling / Logging
log = "0.4.14"
profiling = "1.0.5"
once_cell = "1.9.0"

[[bench]]
name = "scheduler"
harness = false
