[package]
name = "grba_front"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling-tracy = ["profiling/profile-with-tracy", "tracy-client"]
bin-logging = ["grba_core/bin-logging"]

[dependencies]
# General Dependencies
log = "0.4.11"
simplelog = "0.8.0"
anyhow = "1.0.32"
crossbeam = "0.8.0"
itertools = "0.10.3"
once_cell = "1.9.0"

# Core Dependencies
grba_core = { path = "../grba_core", features = ["debug-functionality"] }
capstone = "0.11.0"
bincode = "1.3.3"
serde = "1.0.135"
memmap2 = "0.5.2"
platform-dirs = "0.3.0"
enum-iterator = "0.7.0"

# Frontend
clap = "3.0.10"
cpal = "0.14.0"
winit = "0.27.2"
winit_input_helper = "0.13.0"
wgpu = "0.13"
pixels = {git = "https://github.com/parasyte/pixels"}
egui = { version = "0.19.0", features = ["persistence"] }
egui_wgpu_backend = "0.19.0"
egui-winit = { version = "0.19.0", default-features = false }
egui_memory_editor = { git = "https://github.com/Hirtol/egui_memory_editor" }
spin_sleep = "1.0.0"

# Profiling
profiling = "1.0.5"
tracy-client = { version = "0.14.0", features = ["enable"], optional = true }
image = "0.24.1"

