[package]
name = "grba_front"
version = "0.1.0"
edition = "2021"

[features]
default = []
profiling-tracy = ["profiling/profile-with-tracy", "tracy-client"]
bin-logging = ["grba_core/bin-logging"]

[dependencies]
# General Dependencies
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
crossbeam = "0.8.0"
itertools.workspace = true
once_cell = "1.9.0"

# Core Dependencies
grba_core = { path = "../grba_core", features = ["debug-functionality"] }
capstone = "0.11.0"
bincode = "1.3.3"
serde = "1.0.135"
memmap2 = "0.5.2"
platform-dirs = "0.3.0"
enum-iterator = "1.4.0"

# Frontend
clap.workspace = true
cpal = "0.15.2"
winit = "0.28.3"
winit_input_helper = "0.14.1"
wgpu = "0.15.1"
pixels = {git = "https://github.com/parasyte/pixels"}
egui = { version = "0.21.0", features = ["persistence"] }
egui_wgpu_backend = "0.22.0"
egui-winit = { version = "0.21.1", default-features = false }
egui_memory_editor = { git = "https://github.com/Hirtol/egui_memory_editor" }
spin_sleep = "1.0.0"

# Profiling
profiling = "1.0.5"
tracy-client = { version = "0.15.2", features = ["enable"], optional = true }
image = "0.24.1"

