[package]
name = "grba_log"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6.2"
tabled = { version = "0.4.2", features = ["color"] }
owo-colors = "3.2.0"
thiserror = "1.0.30"
anyhow.workspace = true
grba_core = {path = "../grba_core", features = ["bin-logging", "debug-functionality"]}
itertools.workspace = true

# Parsing
memmap2 = "0.5.2"
zerocopy = { version = "0.6.1", features = ["alloc"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
capstone = "0.11.0"
