[package]
name = "grba_test"
version = "0.1.0"
edition = "2021"

[features]


[dependencies]
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
clap.workspace = true
grba_core = {path = "../grba_core"}
crossbeam = "0.8.0"
rayon = "1.5.1"
image = "0.24.6"
miette = { version = "3.3.0", features = ["fancy"] }

